<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".NewTasksheet">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/taskTittle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/new_task"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/taskDescription"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_normal"
        android:text="@string/task_description"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:padding="16dp"
            android:inputType="textMultiLine|textCapSentences"
            android:background="@drawable/rounded_edit_text"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textCursorDrawable="@drawable/white_cursor"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/timePickerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/select_time"
            android:textColor="?colorOnPrimary"
            app:cornerRadius="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/save"
            android:textColor="?colorOnPrimary"
            app:cornerRadius="20dp"/>
    </LinearLayout>
</LinearLayout>